--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ a:link, a:visited {
   height: 4.5rem;
   -webkit-box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
+  -webkit-transition: background 250ms ease;
+  transition: background 250ms ease;
 }
 
 .nav-toggle {
@@ -187,7 +189,7 @@ a:link, a:visited {
 }
 
 .hero-text-container:hover .developer {
-  color: #3523aa;
+  color: white;
 }
 
 .hero-title {
@@ -226,10 +228,6 @@ a:link, a:visited {
           transform: translateX(-1rem);
 }
 
-.hero-title:hover .developer {
-  color: #3523aa;
-}
-
 .hero-subtitle {
   color: white;
   line-height: 1.5;
@@ -250,15 +248,6 @@ a:link, a:visited {
   text-align: center;
   background: #eeeeee;
   position: relative;
-}
-
-.card {
-  background: #5c2b1f;
-  border-radius: 3px;
-  border: 3px dashed orangered;
-  width: 700px;
-  padding: 2rem;
-  margin: 0 auto;
 }
 
 .about ul {
@@ -285,7 +274,6 @@ a:link, a:visited {
   margin: 1.25rem 0;
   width: 200px;
   border-radius: 50%;
-  /* padding: 0.25rem; */
   border: 4px rgba(0, 0, 0, 0.45) solid;
 }
 
@@ -452,14 +440,26 @@ i {
   background: center/cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
           box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
+  min-height: calc(100vh - 72px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.contact h2, .contact label {
+.contact h2 {
   color: white;
 }
 
 /* FORM */
 form {
+  width: 350px;
   max-width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -470,17 +470,6 @@ form {
           flex-direction: column;
   margin: 0 auto;
   padding: 0 .5rem;
-}
-
-label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  font-size: 1rem;
-  margin: 0;
-  text-align: left;
 }
 
 .name-input, .email-input, .message-input, .submit-btn {
@@ -497,6 +486,10 @@ label {
   background: rgba(255, 255, 255, 0.85);
   -webkit-box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
           box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+
+.message-input {
+  min-height: 150px;
 }
 
 /* Submit Button */
@@ -521,37 +514,55 @@ label {
 }
 
 .submit-btn:hover {
-  background-color: #d9d9d9;
-}
-
-.email {
   color: white;
-  padding: 1rem 0;
-  text-align: center;
+  background: #222;
 }
 
 /* Footer */
 footer {
-  padding: .5rem;
-  background-color: #262626;
-  color: #9E9E9E;
+  padding: 4rem 0 2rem;
+  background-color: black;
+  color: white;
   text-align: center;
+}
+
+footer .contact-links {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+footer .contact-links a {
+  font-size: 2.5rem;
+  color: white;
+  opacity: 0.5;
+  margin: 0 1rem;
+  -webkit-transition: 200ms ease;
+  transition: 200ms ease;
+}
+
+footer .contact-links a:hover {
+  opacity: 1;
+}
+
+footer h6 {
+  border-top: 1px solid rgba(255, 255, 255, 0.35);
 }
 
 footer p, footer h6 {
   color: white;
-  font-size: .7rem;
+  font-weight: 400;
+  opacity: 0.5;
+  font-size: .8rem;
   padding: 1rem 0;
-  -webkit-transition: color 250ms ease;
-  transition: color 250ms ease;
-}
-
-footer p:hover, footer h6:hover {
-  color: #ccc;
+  -webkit-transition: opacity 200ms ease;
+  transition: opacity 200ms ease;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 footer h6 a:link {
   color: white;
+  font-weight: 400;
 }
 
 @media screen and (min-width: 375px) {
