--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,7 @@ a:link, a:visited {
   z-index: 1000;
   height: 4.5rem;
   box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.25);
+  transition: background 250ms ease;
 }
 
 .nav-toggle {
@@ -168,7 +169,7 @@ a:link, a:visited {
 }
 
 .hero-text-container:hover .developer {
-  color: rgb(53, 35, 170);
+  color: $white;
 }
 
 .hero-title {
@@ -198,10 +199,6 @@ a:link, a:visited {
   transform: translateX(-1rem);
 }
 
-.hero-title:hover .developer {
-  color: rgb(53, 35, 170);
-}
-
 .hero-subtitle {
   color: rgba(255, 255, 255, 1);
   line-height: 1.5;
@@ -214,25 +211,14 @@ a:link, a:visited {
   bottom: 10vh;
   text-align: center;
 }
-
 /* /Hero Section */
 
 /* About */
-
 .about {
   min-height: 90vh;
   text-align: center;
   background: $bgAbout;
   position: relative;
-}
-
-.card {
-  background: #5c2b1f;
-  border-radius: 3px;
-  border: 3px dashed orangered;
-  width: 700px;
-  padding: 2rem;
-  margin: 0 auto;
 }
 
 .about ul {
@@ -259,7 +245,6 @@ a:link, a:visited {
   margin: 1.25rem 0;
   width: 200px;
   border-radius: 50%;
-  /* padding: 0.25rem; */
   border: 4px rgba(0, 0, 0, 0.45) solid;
 }
 
@@ -391,7 +376,7 @@ i {
 }
 
 .live-site {
-  background: white;
+  background: $white;
   color: black;
   padding: .4rem;
   border-radius: 3px;
@@ -399,41 +384,32 @@ i {
   cursor: pointer;
 }
 
-// .project-links a {
-//   color: black;
-//   font-weight: 300;
-// }
-
 .project-icon-github {
-  color: white;
+  color: $white;
   font-size: 3rem;
 }
 
 /* Contact */
-
 .contact {
   background: center / cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
+  min-height: calc(100vh - 72px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  h2 {
+    color: $white;
+  }
 }
 
-.contact h2, .contact label {
-  color: rgba(255, 255, 255, 1);
-}
     /* FORM */
 form {
+  width: 350px;
   max-width: 90%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   padding: 0 .5rem;
-}
-
-label {
-  display: flex;
-  align-self: center;
-  font-size: 1rem;
-  margin: 0;
-  text-align: left;
 }
 
 .name-input, .email-input, .message-input, .submit-btn {
@@ -450,6 +426,10 @@ label {
   background: rgba(255, 255, 255, 0.85);
   box-shadow: 1px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
+
+.message-input {
+  min-height: 150px;
+}
     /* Submit Button */
 .submit-btn {
   color: black;
@@ -464,37 +444,53 @@ label {
   margin: 0 auto 1rem;
   transition: background-color 150ms ease-out;
   background-color: #eee;
+  &:hover {
+    color: $white;
+    background: #222;
+  }
 }
 
-.submit-btn:hover {
-  background-color: hsl(0, 0%, 85%);
-}
 
-
-.email {
-  color: white;
-  padding: 1rem 0;
-  text-align: center;
-}
 /* Footer */
 
 footer {
-  padding: .5rem;
-  background-color: #262626;
-  color: #9E9E9E;
+  padding: 4rem 0 2rem;
+  background-color: rgb(0, 0, 0);
+  color: $white;
   text-align: center;
-  p, h6 {
-    color: rgba(255, 255, 255, 1);
-    font-size: .7rem;
-    padding: 1rem 0;
-    transition: color 250ms ease;
-    &:hover {
-      color: #ccc;
+
+  .contact-links {
+    text-align: center;
+    margin-bottom: 1rem;
+    a {
+      font-size: 2.5rem;
+      color: $white;
+      opacity: 0.5;
+      margin: 0 1rem;
+      transition: 200ms ease;
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 
+  h6 {
+    border-top: 1px solid rgba(255, 255, 255, 0.35);
+  }
+  p, h6 {
+    color: $white;
+    font-weight: 400;
+    opacity: 0.5;
+    font-size: .8rem;
+    padding: 1rem 0;
+    transition: opacity 200ms ease;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
   h6 a:link {
-    color: white;
+    color: $white;
+    font-weight: 400;
   }
 }
 
@@ -677,7 +673,7 @@ footer {
 
   .live-site:hover {
     background: #222;
-    color: white;
+    color: $white;
   }
 
   form {
